--- a/index.html
+++ b/index.html
@@ -17,21 +17,12 @@
     </head>
     <body>
 
-        <h1>Works</h1>
+        <h1>Express Works</h1>
 
         
     </body>
     
     <script src="js/vendor/socket.io.js"></script>
-    <script>
-      var socket = io.connect('http://localhost');
-      socket.on('news', function (data) {
-        console.log(data);
-        document.querySelector('h1').innerText = 'adam';
-        socket.emit('my other event', { my: 'data' });
-      });
-    </script>
-
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 
